--- a/Angular_SICDOC/sicdoc/src/assets/js/DataTables/datatables.css
+++ b/Angular_SICDOC/sicdoc/src/assets/js/DataTables/datatables.css
@@ -293,6 +293,8 @@ table.dataTable td {
 }
 .dataTables_wrapper .dataTables_filter input {
   margin-left: 0.5em;
+  display: inline-block;
+  width: auto;
 }
 .dataTables_wrapper .dataTables_info {
   clear: both;
@@ -458,5 +460,3 @@ table.dataTable td {
     margin-top: 0.5em;
   }
 }
-
-
