--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
@@ -1,6 +1,10 @@
 
 <hr />
 <div class="container animated fadeIn fast " style="margin-top:20px, margin-left:300px">
+  <!-- Loader de Carga de los Datos -->
+  <div id="loader-2" *ngIf="loading == 'show'">
+    <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
+  </div>
 <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 		<form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)" name="loginForm" role="form">
@@ -33,7 +37,7 @@
               <input type="submit" class="btn btn-lg btn-success btn-block" value="Ingresar" ng-click="onSubmit()" >
 					</div>
 					<div class="col-xs-6 col-sm-6 col-md-6">
-						<a class="btn btn-lg btn-primary btn-block" [routerLink]="['/registro']">Registrarme</a>
+						<!-- <a class="btn btn-lg btn-primary btn-block" [routerLink]="['/registro']">Registrarme</a> -->
 					</div>
 				</div>
 			</fieldset>
