--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -4,12 +4,12 @@
   <hr class="colorgraph">
 
   <!-- Loader de Carga de los Datos -->
-  <div id="loader-2" *ngIf="loading == 'show'">
+  <div id="loader-2" *ngIf="loading == 'show'" style="margin-left:350px; margin-top:120px;">
     <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
   </div>
 
   <!-- Fila para el Area de Busqueda de los Oficios -->
-  <div class="row">
+  <div class="row" *ngIf="loadTabla1 == true">
     <div class="col-md-1-12">
     <h4>Buscar por:
     <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="temaComunicacion" >Tema |
@@ -24,8 +24,8 @@
   <hr>
 
   <!-- Fila para la tabla Principal de la ventana de finalizar Oficio -->
-  <div class="row">
-    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" >
+  <div class="row" *ngIf="loadTabla1 == true">
+    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%"  >
         <thead >
             <tr>
               <th>Estado</th>
