NAM | 2017-10-09 | Creacion de Cambio deContraseña
Creacion de la ventana de cambio de contraseña, falta validar que la contraseña actual no sea igual ala nueva y que la  Ingresada sea la misma que la de la BD

--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -122,6 +122,10 @@
       </div>
 
             <table id="example" class="display" cellspacing="0" style="font-size:15px;" *ngIf="loadTabla1 == true">
+              <!-- Loader de Carga de los Datos -->
+              <!-- <div id="loader-2" *ngIf="loading_tableIn == 'show' " style="margin-left:350px; margin-top:120px;">
+                <img src="assets/images/30.gif" alt="Cargando Tareas">
+              </div> -->
               <thead>
                   <tr>
                       <th>No. Interno</th>
