--- a/symfony/app/Resources/views/Emails/changePassWord.html.twig
+++ b/symfony/app/Resources/views/Emails/changePassWord.html.twig
@@ -8,15 +8,12 @@
         <div class="jumbotron">
             <h1 class="display-3">Estimado(a): </h1>
             <h2 class="display-3">{{ name }}  {{ apellidoOficio }} </h2>
-            <p class="lead">Se ha ingresado un Oficio, con la siguiente informacion: </p>
+            <p class="lead">Se le comunica el cambio de contraseña: </p>
             <hr class="my-4">
             <ul>
-                <li> Numero de Oficio Externo: {{ oficioExtNo }} </li>
-                <li> Numero de Oficio Interno: {{ oficioInNo }} </li>
-                <li> Tema: {{ temaOficio }} </li>
-                <li> Contenido: {{ descOficio }} </li>
-                <li> Fecha Entrega: {{ fechaIngresoOfi }} </li>
-                <li> Fecha Creacion: {{ fechaIngresoCom }}</li>                
+                <li> Anterior: {{ passAnterior }} </li>
+                <li> Actual:  {{ passActual }} </li>
+                <li> Fecha de Cambio : {{ fechaChange }} </li>                
             </ul>
             
             <h4> Saludos cordiales </h4>
