--- a/Angular_SICDOC/sicdoc/src/app/views/shared/header.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/header.component.html
@@ -1,6 +1,11 @@
-<div class="col-12">
-<div class="page-header">
-  <img src="../assets/images/sreci.png" class="img-fluid pull-xs-left" alt="SRECI" style="width:250px">
-  <h1 style=" font-family: -system-ui ">Sistema de Control de Documentación <small>| SICDOC | SDCI</small></h1>
+<!-- <div class="container-fluid"> -->
+<div class="container-fluid">
+  <div class="row-fluid">
+  <!-- <div  style="width:100%"> -->
+    <!-- <div class="page-header"> -->
+      <img src="../assets/images/sreci.png" class="img-fluid pull-xs-left" alt="SRECI" style="width:250px">
+      <h1 style=" font-family: -system-ui ">Sistema de Control de Documentación <small>| SICDOC | SDCI</small></h1>
+    <!-- </div> -->
+  </div>
 </div>
-<div>
+<!-- </div> -->
