--- a/symfony/app/Resources/views/Emails/changePassWord.html.twig
+++ b/symfony/app/Resources/views/Emails/changePassWord.html.twig
@@ -10,9 +10,8 @@
             <h2 class="display-3">{{ name }}  {{ apellidoOficio }} </h2>
             <p class="lead">Se le comunica el cambio de contraseña: </p>
             <hr class="my-4">
-            <ul>
-                <li> Anterior: {{ passAnterior }} </li>
-                <li> Actual:  {{ passActual }} </li>
+            <ul>                
+                <li> Contrseña Actual:  {{ passActual }} </li>
                 <li> Fecha de Cambio : {{ fechaChange }} </li>                
             </ul>
             
