--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -100,8 +100,8 @@
     <!-- FIN | Panel de Filtros de Busqueda -->
   <!-- </div> -->
 
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-12" >
+  <div class="row-fluid">
+    <div class="col-xs-12 col-md-12 col-lg-12" >
       <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="status == 'success'" >
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
@@ -117,11 +117,12 @@
       </div>
 
       <!-- Loader de Carga de los Datos -->
-      <div id="loader-2" *ngIf="loading == 'show' " style="margin-left:350px; margin-top:120px;">
+      <div id="loader-2" *ngIf="loading == 'show' " style="margin-left:35%; margin-top:5%;">
         <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
       </div>
 
-            <table id="example" class="display" cellspacing="0" style="font-size:15px;" *ngIf="loadTabla1 == true">
+            <table id="example" class="table table-striped table-bordered"
+                cellspacing="0" style="font-size:15px;" *ngIf="loadTabla1 == true">
               <!-- Loader de Carga de los Datos -->
               <!-- <div id="loader-2" *ngIf="loading_tableIn == 'show' " style="margin-left:350px; margin-top:120px;">
                 <img src="assets/images/30.gif" alt="Cargando Tareas">
@@ -205,7 +206,7 @@
                       <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:300px; margin-top:100px;" >
                         <img src="assets/images/30.gif" alt="Cargando Tareas" >
                       </div>
-                      <table class="example" style="font-size:15px" *ngIf="loadTabla2 == true">
+                      <table class="example" class="table table-striped table-bordered" style="font-size:15px" *ngIf="loadTabla2 == true">
                         <thead>
                           <tr>
                             <th>No. Interno</th>
@@ -243,4 +244,5 @@
             </div><!-- /.modal -->
     </div>
   </div>
+  <hr>
 </div>
