--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -8,8 +8,8 @@
     <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
   </div>
   <!-- Fila para el Area de Busqueda de los Oficios -->
-  <div class="row">
-    <div class="col-md-1-12">
+  <div class="row-fluid">
+    <div class="col-xs-12 col-md-12 col-lg-12">
     <h4>Buscar por:
       <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="temaComunicacion" >Tema de Oficio |
     <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="codCorrespondenciaEnc" checked="checked" >No. Oficio Interno |
@@ -28,9 +28,8 @@
 
   <hr>
 
-  <div class="row">
-
-    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" >
+  <div class="col-xs-12 col-md-12 col-lg-12">
+    <table id="example" class="table table-striped table-bordered" cellspacing="0"  >
         <thead >
             <tr>
               <th>Estado</th>
