--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -1,98 +1,108 @@
+<!-- Importaos el Componente de Header -->
 <app-header></app-header>
 
-<!-- <nav class="navbar navbar-dark bg-primary"> -->
-<nav *ngIf="identity && identity != null" class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" [routerLink]="['index']" >Dashboard</a>
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+<div class="container-fluid">
+<div class="row-fluid">
+    <!-- <nav class="navbar navbar-dark bg-primary"> -->
+    <nav *ngIf="identity && identity != null" class="navbar navbar-expand-lg navbar-light bg-faded">
+      <div class="container-fluid">
 
-      <!-- Menu de Ingreso y Mantenimiento de Comunicacion | Oficios -->
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Comunicacion
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" [routerLink]="['ingreso-comunicacion']" routerLinkActive="active">Ingreso de Comunicacion</a>
-          <hr>
-          <a class="dropdown-item" [routerLink]="['ingreso-comunicacion-tipo']" routerLinkActive="active">Salida de Comunicacion</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" [routerLink]="['index']" >Dashboard</a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
-          <!-- <a class="dropdown-item" href="#/" routerLinkActive="active">Respuesta de Comunicacion</a> -->
-        </div>
-      </li>
+              <!-- Menu de Ingreso y Mantenimiento de Comunicacion | Oficios -->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Comunicacion
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" [routerLink]="['ingreso-comunicacion']" routerLinkActive="active">Ingreso de Comunicacion</a>
+                  <hr>
+                  <a class="dropdown-item" [routerLink]="['ingreso-comunicacion-tipo']" routerLinkActive="active">Salida de Comunicacion</a>
 
-      <!-- Menu de Seguimiento -->
-      <li class="nav-item dropdown" >
-        <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Seguimiento
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" *ngIf="identity.idTipoUser == 4 || identity.idTipoUser == 1"  [routerLink]="['asignar-actividad']" routerLinkActive="active">Asignar Comunicacion</a>
-          <!-- <a class="dropdown-item" [routerLink]="['agregar-actividad']" routerLinkActive="active">Agregar Actividad</a> -->
-          <a class="dropdown-item" [routerLink]="['finalizar-actividad']" routerLinkActive="active">Agregar / Finalizar Comunicacion</a>
-          <hr>
-          <a class="dropdown-item" [routerLink]="['seguimiento-actividad']" routerLinkActive="active">Seguimiento de Comunicacion</a>
-          <!-- <a class="dropdown-item" [routerLink]="['finalizar-actividad']">Agregar Documentos / Comunicacion</a> -->
-        </div>
-      </li>
+                  <!-- <a class="dropdown-item" href="#/" routerLinkActive="active">Respuesta de Comunicacion</a> -->
+                </div>
+              </li>
 
-    <!-- Menu de Consultas -->
-    <!-- <li class="nav-item dropdown"  *ngIf="identity.idTipoUser == 4 || identity.idTipoUser == 1"> -->
-    <li class="nav-item dropdown" >
-      <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Consultas
-      </a>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item"
-             [routerLink]="['consulta-maestra-comunicacion']" routerLinkActive="active">Consulta General de Comunicaciones</a>
+              <!-- Menu de Seguimiento -->
+              <li class="nav-item dropdown" >
+                <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Seguimiento
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" *ngIf="identity.idTipoUser == 4 || identity.idTipoUser == 1"  [routerLink]="['asignar-actividad']" routerLinkActive="active">Asignar Comunicacion</a>
+                  <!-- <a class="dropdown-item" [routerLink]="['agregar-actividad']" routerLinkActive="active">Agregar Actividad</a> -->
+                  <a class="dropdown-item" [routerLink]="['finalizar-actividad']" routerLinkActive="active">Agregar / Finalizar Comunicacion</a>
+                  <hr>
+                  <a class="dropdown-item" [routerLink]="['seguimiento-actividad']" routerLinkActive="active">Seguimiento de Comunicacion</a>
+                  <!-- <a class="dropdown-item" [routerLink]="['finalizar-actividad']">Agregar Documentos / Comunicacion</a> -->
+                </div>
+              </li>
+
+            <!-- Menu de Consultas -->
+            <!-- <li class="nav-item dropdown"  *ngIf="identity.idTipoUser == 4 || identity.idTipoUser == 1"> -->
+            <li class="nav-item dropdown" >
+              <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Consultas
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item"
+                     [routerLink]="['consulta-maestra-comunicacion']" routerLinkActive="active">Consulta General de Comunicaciones</a>
+              </div>
+            </li>
+          </ul>
+
+
+            <!-- Menu de Login Identificado -->
+            <ul *ngIf="identity" class="nav navbar-nav navbar-right" id="credentials-top">
+              <li>
+                <a class="user-image" >
+                  <img src="http://localhost/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt="">
+                  <!-- <img src="http://192.168.0.15/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt="">           -->
+                </a>
+              </li>
+              <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                   {{ identity.nombre }} {{ identity.apellido }} <span class="caret" ></span>
+                 </a>
+                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                   <!-- <a class="dropdown-item" [routerLink]="['/index']">
+                       <i class="material-icons">border_color</i> Editar Perfil</a> -->
+                   <a class="dropdown-item" data-toggle="modal" data-target="#myModal" href="/#">
+                     <i class="material-icons">security</i> Cambiar Contraseña</a>
+                   <hr>
+                   <a class="dropdown-item" [routerLink]="['/login/1']">
+                     <i class="material-icons">exit_to_app</i> Cerrar sesion</a>
+                 </div>
+               </li>
+
+           </ul>
+
+           <!-- Menu de Login No Identificado -->
+           <ul *ngIf="!identity || identity == null" class="navbar-nav">
+            <li class="nav-item">
+             <a class="nav-link" [routerLink]="['/login']">Acceder</a>
+           </li>
+           <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/registro']">Registro</a>
+          </li>
+          </ul>
+
+            <!-- <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+            </form> -->
+          </div>
       </div>
-    </li>
-  </ul>
+    </nav>
 
-
-    <!-- Menu de Login Identificado -->
-    <ul *ngIf="identity" class="nav navbar-nav navbar-right" id="credentials-top">
-      <li>
-        <a class="user-image" >
-          <img src="http://localhost/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt="">
-          <!-- <img src="http://192.168.0.15/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt="">           -->
-        </a>
-      </li>
-      <li class="nav-item dropdown">
-         <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-           {{ identity.nombre }} {{ identity.apellido }} <span class="caret" ></span>
-         </a>
-         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-           <!-- <a class="dropdown-item" [routerLink]="['/index']">
-               <i class="material-icons">border_color</i> Editar Perfil</a> -->
-           <a class="dropdown-item" data-toggle="modal" data-target="#myModal" href="/#">
-             <i class="material-icons">security</i> Cambiar Contraseña</a>
-           <hr>
-           <a class="dropdown-item" [routerLink]="['/login/1']">
-             <i class="material-icons">exit_to_app</i> Cerrar sesion</a>
-         </div>
-       </li>
-
-   </ul>
-
-   <!-- Menu de Login No Identificado -->
-   <ul *ngIf="!identity || identity == null" class="navbar-nav">
-    <li class="nav-item">
-     <a class="nav-link" [routerLink]="['/login']">Acceder</a>
-   </li>
-   <li class="nav-item">
-    <a class="nav-link" [routerLink]="['/registro']">Registro</a>
-  </li>
-  </ul>
-
-    <!-- <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-    </form> -->
-  </div>
-</nav>
+</div>
+</div>
+<!-- Fin de Menu de Aplicacion -->
 
 <!-- Ventana Modal de Editar Usuario -->
 <div id="myModal1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -135,14 +145,14 @@
         </div>
         <!-- Formulario de Cambio de Contraseña -->
         <form #changePassForm="ngForm" (ngSubmit)="onSubmit(changePassForm)" name="changePassForm" role="form">
-            <div class="form-group">
+            <!-- <div class="form-group">
               <input #passwordUsuairoAct="ngModel" type="password" name="passwordUsuairoAct" id="passwordUsuairoAct" class="form-control input-lg"
                   ngControl="passwordUsuairoAct" [(ngModel)]="jsonSendChangePass.passWordUserAct"
                   placeholder="Contraseña Actual" tabindex="10" required minlength="5" maxlength="20">
                   <small class="form-text text-muted" *ngIf="passwordUsuairoAct.errors?.minlength" >Se nesesita por lo menos {{ passwordUsuairoAct.errors.minlength.requiredLength }} caracteres</small>
                   <small class="form-text text-muted" *ngIf="passwordUsuairoAct.errors?.required" >La Contraseña es obligatoria</small>
-            </div>
-            <hr>
+            </div> -->
+            <!-- <hr> -->
             <div class="form-group">
               <input #passwordUsuairo="ngModel" type="password" name="passwordUsuairo" id="passwordUsuairo" class="form-control input-lg"
                   ngControl="passwordUsuairo" [(ngModel)]="user.passwordUsuairo"
